// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lemma Processing Service getRawLemmasFromText should extract raw lemmas from capitalization 1`] = `
[
  {
    "isStopWord": false,
    "lemma": "walk",
    "original": "WALK",
  },
  {
    "isStopWord": false,
    "lemma": "walk",
    "original": "walk",
  },
  {
    "isStopWord": false,
    "lemma": "walk",
    "original": "Walk",
  },
]
`;

exports[`Lemma Processing Service getRawLemmasFromText should extract raw lemmas from empty string 1`] = `[]`;

exports[`Lemma Processing Service getRawLemmasFromText should extract raw lemmas from mixed parts of speech 1`] = `
[
  {
    "isStopWord": true,
    "lemma": "the",
    "original": "The",
  },
  {
    "isStopWord": false,
    "lemma": "quick",
    "original": "quick",
  },
  {
    "isStopWord": false,
    "lemma": "brown",
    "original": "brown",
  },
  {
    "isStopWord": false,
    "lemma": "fox",
    "original": "fox",
  },
  {
    "isStopWord": false,
    "lemma": "jump",
    "original": "jumps",
  },
  {
    "isStopWord": true,
    "lemma": "over",
    "original": "over",
  },
  {
    "isStopWord": true,
    "lemma": "the",
    "original": "the",
  },
  {
    "isStopWord": false,
    "lemma": "lazy",
    "original": "lazy",
  },
  {
    "isStopWord": false,
    "lemma": "dog",
    "original": "dog",
  },
]
`;

exports[`Lemma Processing Service getRawLemmasFromText should extract raw lemmas from only stopwords 1`] = `
[
  {
    "isStopWord": true,
    "lemma": "be",
    "original": "Is",
  },
  {
    "isStopWord": true,
    "lemma": "it",
    "original": "it",
  },
  {
    "isStopWord": true,
    "lemma": "be",
    "original": "Am",
  },
  {
    "isStopWord": true,
    "lemma": "i",
    "original": "I",
  },
  {
    "isStopWord": true,
    "lemma": "be",
    "original": "Are",
  },
  {
    "isStopWord": true,
    "lemma": "you",
    "original": "you",
  },
]
`;

exports[`Lemma Processing Service getRawLemmasFromText should extract raw lemmas from repeated words 1`] = `
[
  {
    "isStopWord": false,
    "lemma": "cat",
    "original": "Cats",
  },
  {
    "isStopWord": true,
    "lemma": "and",
    "original": "and",
  },
  {
    "isStopWord": false,
    "lemma": "cat",
    "original": "cats",
  },
  {
    "isStopWord": true,
    "lemma": "and",
    "original": "and",
  },
  {
    "isStopWord": false,
    "lemma": "cat",
    "original": "cats",
  },
]
`;

exports[`Lemma Processing Service getRawLemmasFromText should extract raw lemmas from simple nouns 1`] = `
[
  {
    "isStopWord": false,
    "lemma": "cat",
    "original": "Cats",
  },
  {
    "isStopWord": true,
    "lemma": "be",
    "original": "are",
  },
  {
    "isStopWord": false,
    "lemma": "animal",
    "original": "animals",
  },
]
`;

exports[`Lemma Processing Service getRawLemmasFromText should extract raw lemmas from verbs in different forms 1`] = `
[
  {
    "isStopWord": true,
    "lemma": "he",
    "original": "He",
  },
  {
    "isStopWord": false,
    "lemma": "play",
    "original": "played",
  },
  {
    "isStopWord": true,
    "lemma": "and",
    "original": "and",
  },
  {
    "isStopWord": true,
    "lemma": "be",
    "original": "is",
  },
  {
    "isStopWord": false,
    "lemma": "play",
    "original": "playing",
  },
  {
    "isStopWord": false,
    "lemma": "football",
    "original": "football",
  },
]
`;

exports[`Lemma Processing Service matchLemmas should match raw lemmas with known lemmas 1`] = `
[
  {
    "addedAt": 2025-04-19T00:00:00.000Z,
    "isStopWord": false,
    "known": true,
    "lemma": "cat",
    "original": "Cats",
    "translations": [
      {
        "original": "cat",
        "sentence": "If I decide to have a pet, it will be a cat.",
        "value": "кот",
      },
    ],
  },
  {
    "addedAt": 2025-04-19T00:00:00.000Z,
    "isStopWord": false,
    "known": true,
    "lemma": "animal",
    "original": "animals",
    "translations": [
      {
        "original": "animal",
        "sentence": "An injured animal found a shelter.",
        "value": "животное",
      },
    ],
  },
  {
    "addedAt": undefined,
    "isStopWord": false,
    "known": false,
    "lemma": "play",
    "original": "played",
    "translations": undefined,
  },
]
`;
